Last files that we got from Elias

--- a/index-home-login.html
+++ b/index-home-login.html
@@ -32,13 +32,13 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand">FoodieJournal</a>
-                        <a class="navbar-brand login-collapsed" id="btnLoginCollapsed" href="#">Login</a>
+                        <a class="btn-login navbar-brand login-collapsed" href="#">Login</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="menu">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a id="btnLogin" href="#">Login</a>
+                            <li><a class="btn-login" href="#">Login</a>
                             </li>
                         </ul>
                     </div>
