--- a/index-journey.html
+++ b/index-journey.html
@@ -37,8 +37,10 @@
 
                     <div class="collapse navbar-collapse" id="menu">
                         <ul class="nav navbar-nav">
-                            <li><a href="index-journey-overview.html">Journey</a></li>
-                            <li class="active"><a href="index-journey.html">My Progress</a></li>
+                            <li><a href="index-journey-overview.html">Journey</a>
+                            </li>
+                            <li class="active"><a href="index-journey.html">My Progress</a>
+                            </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
@@ -68,8 +70,8 @@
             <div class="col-xs-12">
                 <div class="journey">
 
-                    <div class="text-center">
-                        <h3>Welcome! Choose a track to get started</h3>
+                    <div class="text-center journey-welcome">
+                        <h3><span>Welcome!</span> Choose a track to get started</h3>
                     </div>
 
                     <div class="col-sm-3 food-type-container">
@@ -123,14 +125,6 @@
             </div>
         </div>
 
-
-        <footer>
-            <p>Developed by</p>
-            <div class="footer-images">
-                <div class="sprites aowp"></div>
-                <div class="sprites accenture-owp"></div>
-            </div>
-        </footer>
     </div>
     <!--Vendor Javascript-->
     <script src="vendor/jquery/jquery.js"></script>
