Remove Map and Photos Section. Add Review Section

--- a/index-journey-challenge.html
+++ b/index-journey-challenge.html
@@ -83,27 +83,32 @@
                             <span class="ch-title">Traditional American Desserts</span><span class="challenge-status">Started</span>
                         </div>
                         <div class="row ch-body">
-                            <div class="col-sm-6 food-info">
-                                <img src="content/images/challenge-gallery-preview.jpg" alt="Gallery Preview" />
+                            <div class="row">
+                                <div class="col-sm-8 description">
+                                    <h5>Instructions: Go ahead and ask for the ultimate Caramel Apple Pie</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pretium semper velit. Aliquam at mi mi. Fusce sed tellus nisl. Duis in sagittis velit. Vestibulum viverra vitae leo in mattis. Etiam bibendum venenatis dolor quis pulvinar.</p>
+                                </div>
+                                <div class="col-xs-6 col-sm-4 contact">
+                                    <span class="r-wtime">Today 8:00 am - 9:00 pm</span>
+                                    <br>
+                                    <span class="r-status open">Open now</span>
+                                    <hr>
+                                    <span class="r-phone"><a><i class="fa fa-phone"></i> (510) 123-4564</a></span>
+                                    <br>
+                                    <span class="r-website"><a><i class="fa fa-external-link"></i> www.frankies.com</a></span>
+                                </div>
+                                <div class="col-xs-6 col-sm-12 body-actions">
+                                    <a href="#">Resend text notification</a>
+                                </div>
                             </div>
-                            <div class="col-sm-6 map">
-                                <img src="content/images/map-example.jpg" alt="Location" />
-                            </div>
-                            <div class="col-sm-8 description">
-                                <h5>Instructions: Go ahead and ask for the ultimate Caramel Apple Pie</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pretium semper velit. Aliquam at mi mi. Fusce sed tellus nisl. Duis in sagittis velit. Vestibulum viverra vitae leo in mattis. Etiam bibendum venenatis dolor quis pulvinar.</p>
-                            </div>
-                            <div class="col-sm-4 contact">
-                                <span class="r-wtime">Today 8:00 am - 9:00 pm</span>
-                                <br>
-                                <span class="r-status open">Open now</span>
-                                <hr>
-                                <span class="r-phone"><a><i class="fa fa-phone"></i> (510) 123-4564</a></span>
-                                <br>
-                                <span class="r-website"><a><i class="fa fa-external-link"></i> www.frankies.com</a></span>
-                            </div>
-                            <div class="col-sm-12 body-actions">
-                                <button class="btn btn-default">Resent text notification</button>
+                            <div class="row reviews">
+                                <div class="col-xs-3 col-sm-2 profile">
+                                    <img src="content/images/ms.jpg" alt="profile image">
+                                </div>
+                                <div class="col-xs-9 col-sm-6 customerReview">
+                                    <p><img src="content/images/open.jpg">One of the BEST Japanese restaurants I have ever been to. The food is amazing in both quality and flavor, the ambiance is unlike NYC, very spacious and...<img src="content/images/close.jpg"></p>
+                                </div>
+                                <div class="col-xs-12 col-sm-4"></div>
                             </div>
                         </div>
                     </div>
