--- a/index-journey-overview.html
+++ b/index-journey-overview.html
@@ -135,7 +135,7 @@
                             <span class="fti-title">All-American Bacon Cheeseburger</span>
                         </div>
                         <div class="fti-body">
-                            <div class="col-md-4 review">
+                            <div class="col-sm-3 col-md-4 review">
                                 <span class="r-name">Frankie's</span>
                                 <br>
                                 <span class="r-rating">
@@ -151,7 +151,7 @@
                                 <br>
                                 <span class="r-address">66 Mint St. San Francisco, CA 94103</span>
                             </div>
-                            <div class="col-md-4 contact">
+                            <div class="col-sm-3 col-md-4 contact">
                                 <span class="r-wtime">Today 8:00 am - 9:00 pm</span>
                                 <br>
                                 <span class="r-status open">Open now</span>
@@ -160,13 +160,11 @@
                                 <br>
                                 <span class="r-website"><a><i class="fa fa-external-link"></i> www.frankies.com</a></span>
                             </div>
-                            <div class="col-md-4 gallery">
-                                <img src="content/images/stack.png" alt="See all photos">
-                                <br>
-                                <span>See all photos</span>
+                            <div class="col-sm-2 col-md-2 profile">
+                                <img src="content/images/ms.jpg" alt="profile image">
                             </div>
-                            <div class="col-md-4 google-map">
-                                <img src="content/images/google-maps-icon.png" alt="Google Maps">
+                            <div class="col-sm-4 col-md-6 customerReview">
+                                <img src="content/images/open.jpg">One of the BEST Japanese restaurants I have ever been to. The food is amazing in both quality and flavor, the ambiance is unlike NYC, very spacious and...<img src="content/images/close.jpg">
                             </div>
                         </div>
                     </div>
