--- a/index-home-login.html
+++ b/index-home-login.html
@@ -55,19 +55,19 @@
                                 <div class="form-group">
                                     <input type="password" class="form-control" placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-default btn-block">Login</button>
+                                <button type="submit" class="btn btn-block login-btn">Login</button>
                             </form>
                         </div>
                         <div class="col-xs-12">
-                            <p>or login with:</p>
+                            <p>or login with</p>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos">
                             <div class="sprites facebook"></div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos">
                             <div class="sprites twitter"></div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos">
                             <div class="sprites google-plus"></div>
                         </div>
                         <div class="arrow-up"></div>
