--- a/index-journey.html
+++ b/index-journey.html
@@ -15,6 +15,7 @@
     <link href="content/styles/css/sprite.css" rel="stylesheet" />
     <link href="content/styles/css/styles.css" rel="stylesheet" />
 
+
 </head>
 
 <body>
@@ -23,7 +24,7 @@
         <!--Navigation Menu-->
         <header>
             <nav class="navbar navbar-default">
-                <div class="container-fluid">
+                <div>
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
@@ -32,16 +33,25 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand">FoodieJournal</a>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="menu">
+                        <div class="navbar-pad" >
                         <ul class="nav navbar-nav">
-                            <li><a href="index-journey-overview.html">Journey</a>
-                            </li>
-                            <li class="active"><a href="index-journey.html">My Progress</a>
+                            <li class="dropdown">
+                                <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" >
+                                    <img src="mvcuisine/images/icons/Hamburger-menu.png">
+                                </a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="index-journey-overview.html" role="button">Journey</a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li><a href="index-journey.html" role="button">My Progress</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
+                            </div>
+                    </div>
+                    <a class="navbar-brand">FoodieJournal</a>
+                    <div class="collapse navbar-collapse" id="menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture! 
@@ -132,6 +142,7 @@
 
     <!--Custom Javascript-->
     <script src="app/dom.manipulation.js"></script>
+
 
 </body>
 
