--- a/index-journey-challenge.html
+++ b/index-journey-challenge.html
@@ -1,173 +1,179 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Capstone</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
 
-<head>
-    <title>Capstone</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+        <!--Vendor CSS-->
+        <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    <!--Vendor CSS-->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet" />
-
-    <!--Custom CSS-->
-    <link href="content/styles/css/sprite.css" rel="stylesheet" />
-    <link href="content/styles/css/styles.css" rel="stylesheet" />
-
-</head>
-
-<body>
-    <div class="container">
-
-        <!--Navigation Menu-->
-        <header>
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand">FoodieJournal</a>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="menu">
-                        <ul class="nav navbar-nav">
-                            <li><a href="index-journey-overview.html">Journey</a>
-                            </li>
-                            <li><a href="index-journey.html">My Progress</a>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture! 
-                                    <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">My account</a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li><a href="index-home-login.html">Logout</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container-fluid -->
-            </nav>
-
-        </header>
-
-        <!-- Main Container-->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="journey-challenge">
-                    <div class="breadcrumb">
-                        <i class="fa fa-long-arrow-left"></i> Journeys /
-                        <span class="current-journey-name">American</span>
-                    </div>
-
-                    <div class="challenge">
-                        <div class="ch-header">
-                            <span class="fa-stack fa-lg text-center">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa ch-number">2</i>
-                            </span>
-                            <span class="ch-title">Traditional American Desserts</span><span class="challenge-status">Started</span>
+        <!--Custom CSS-->
+        <link href="content/styles/css/sprite.css" rel="stylesheet" />
+        <link href="content/styles/css/styles.css" rel="stylesheet" />
+        <!--Google Map js-->
+        <script src="http://maps.googleapis.com/maps/api/js"></script>
+    </head>
+    <body>
+            <div class="container">
+            <!--Navigation Menu-->
+            <header>
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand">FoodieJournal</a>
                         </div>
-                        <div class="row ch-body">
-                            <div class="row">
-                                <div class="col-sm-8 description">
-                                    <h5>Instructions: Go ahead and ask for the ultimate Caramel Apple Pie</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pretium semper velit. Aliquam at mi mi. Fusce sed tellus nisl. Duis in sagittis velit. Vestibulum viverra vitae leo in mattis. Etiam bibendum venenatis dolor quis pulvinar.</p>
-                                </div>
-                                <div class="col-xs-6 col-sm-4 contact">
-                                    <span class="r-wtime">Today 8:00 am - 9:00 pm</span>
-                                    <br>
-                                    <span class="r-status open">Open now</span>
-                                    <hr>
-                                    <span class="r-phone"><a><i class="fa fa-phone"></i> (510) 123-4564</a></span>
-                                    <br>
-                                    <span class="r-website"><a><i class="fa fa-external-link"></i> www.frankies.com</a></span>
-                                </div>
-                                <div class="col-xs-6 col-sm-12 body-actions">
-                                    <a href="#">Resend text notification</a>
-                                </div>
+                        <!-- Navigation for different menu -->
+                        <div class="collapse navbar-collapse" id="menu">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index-journey-overview.html">Journey</a>
+                                </li>
+                                <li><a href="index-journey.html">My Progress</a>
+                                </li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
+                                        <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
+                                        <span class="caret"></span>
+                                    </a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#">My account</a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li><a href="index-home-login.html">Logout</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.navbar-collapse -->
+                    </div>
+                    <!-- /.container-fluid -->
+                </nav>
+            </header>
+
+            <!-- Main Container-->
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="journey-challenge">
+                        <!--for horizontal page navigation-->
+                        <div class="breadcrumb">
+                            <i class="fa fa-long-arrow-left"></i> Journeys<span class="slash"> / </span>
+                            <span class="current-journey-name">American</span>
+                        </div>
+                        <!--for   page  body start here -->
+                        <div class="challenge">
+                            <!--for   page header  -->
+                            <div class="ch-header">
+                                    <span class="fa-stack fa-lg text-center">
+                                            <i class="fa fa-circle fa-stack-2x"></i>
+                                            <i class="fa ch-number">2</i>
+                                    </span>
+                                    <span class="ch-title">Traditional American
+                                        <span class="hideformobile">Desserts</span>
+                                        <span class="uppercase  hidden-xs challenge-status">Started</span>
+                                    </span>
                             </div>
-                            <div class="row reviews">
-                                <div class="col-xs-3 col-sm-2 profile">
-                                    <img src="content/images/ms.jpg" alt="profile image">
+                            <!--for page display rowwise layout  -->
+                            <div class="row ch-body">
+                                <!--for first row that are instruction and contact  -->
+                                <div class="row">
+                                    <div class="col-sm-8 description">
+                                        <h5>Instructions: Go ahead and ask for the ultimate Caramel Apple Pie</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pretium semper velit. Aliquam at mi mi. Fusce sed tellus nisl. Duis in sagittis velit. Vestibulum viverra vitae leo in mattis. Etiam bibendum venenatis dolor quis pulvinar.</p>
+                                    </div>
+                                    <div class="col-xs-6 col-sm-4 contact" >
+                                        <span class="r-wtime"><span class="today">Today</span><span class="time"> 8:00 am - 9:00 pm</span></span>
+                                        <br>
+                                        <span class="r-status open"><span class="open">Open now</span></span>
+                                        <hr align="left" width="50%">
+                                        <span class="r-phone"><a><i class="fa fa-phone"></i> (510) 123-4564</a></span>
+                                        <br>
+                                        <span class="r-website"><a><i class="fa fa-external-link"></i> www.frankies.com</a></span>
+                                    </div>
                                 </div>
-                                <div class="col-xs-9 col-sm-6 customerReview">
-                                    <p><img src="content/images/open.jpg">One of the BEST Japanese restaurants I have ever been to. The food is amazing in both quality and flavor, the ambiance is unlike NYC, very spacious and...<img src="content/images/close.jpg"></p>
+                                <!--Second row only for resend button  only for desktop and tablet -->
+                                <div class="row hidden-xs">
+                                    <div class="col-md-2 ">
+                                        <p align="left">
+                                            <input  value="Resend" id="mybutton"  class="primary-btn col-xs-02" type="button" value="Resend" >
+                                        </p>
+                                    </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4"></div>
+                                <!--Third row only for resend hyperlink only for mobile -->
+                                <div class="row  hidden-md hidden-sm">
+                                    <div class="gray-box-container col-xs-2">
+                                        <a href="tel:1-510-653-3394" class="text-address" data-toggle="tab">Resend
+                                        </a>
+                                    </div>
+                                </div>
+                                <!--Fourth row only for Pie image and map-->
+                                <div class="row reviews">
+                                    <div class="col-md-4 col-sm-12 col-xs-12 profile">
+                                        <img src="content/images/ms.jpg" alt="profile image" height="200" width="220">
+                                    </div>
+                                    <div class="col-md-8 col-sm-12 col-xs-12 customerReview">
+                                        <div id="googleMap" style="width:400px;height:200px;" ></div>
+                                    </div>
+                                </div>
+                                <!--Fifth row only for food description-->
+                                <div class="row reviews">
+                                    <div class="col-md-12  col-sm-12 col-xs-12  customerReview">
+                                        <img src="content/images/open.jpg">
+                                        <p >One of the BEST Japanese restaurants I have ever been to. The food is amazing in both quality and flavor, the ambiance is unlike NYC, very spacious and...<img src="content/images/close.jpg">
+                                        </p>
+                                    </div>
+                                </div>
+                                <!--All row ends here-->
                             </div>
                         </div>
-                    </div>
-                    <div class="row actions">
+                        <!--Button releted rows starts here-->
                         <div class="row actions">
-                            <div class="col-sm-3 previous">
-                                <button class="btn btn-inverse btn-block">Previous</button>
+                            <!--Desktop Releted Button layout-->
+                            <div class="row actions">
+                                <div class="col-sm-3 previous hidden-xs hidden-sm">
+                                    <button class="btn  btn-block">Previous</button>
+                                </div>
+                                <div class="col-sm-6 hidden-sm ">
+                                    <button id="btnProvideReason" class="btn btn-default btn-block">Provide Reason</button>
+                                </div>
+                                <div class="col-sm-3 next hidden-xs hidden-sm">
+                                    <button class="btn btn-default btn-block">Next</button>
+                                </div>
                             </div>
-                            <div class="col-sm-6 change-status" hidden="hidden">
-                                <button class="btn btn-primary btn-block">Mark as Started</button>
-                            </div>
-                            <div class="col-sm-6" hidden="hidden">
-                                <a class="btn btn-default btn-block challenge-completed">
-                                    <i class="fa fa-check-circle fa-lg"></i> Way to go! Take the next challenge!
-                                </a>
-                            </div>
-                            <div class="col-sm-6">
-                                <button id="btnProvideReason" class="btn btn-default btn-block">Provide Reason</button>
-                            </div>
-                            <div class="col-sm-3 next">
-                                <button class="btn btn-default btn-block">Next</button>
+                            <!--Tablets tow button each of  having 6 grid layout-->
+                            <div class="row hidden-xs hidden-md">
+                                <div class="col-sm-6 previous hidden-xs">
+                                    <button class="btn  btn-block">Previous</button>
+                                </div>
+                                <div class="col-sm-6 previous hidden-xs">
+                                    <button class="btn  btn-block">Next</button>
+                                </div>
+                            </div><br>
+                            <!--Tablets one button  having  grid layout-->
+                            <div class="row hidden-xs hidden-md">
+                                <div class="col-sm-12  hidden-xs">
+                                    <button class="btn  btn-block">Provide Reason Button</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- Provide Reason Modal-->
-    <div class="provide-reason modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title">You ran out time!</h2>
-                </div>
-                <div class="modal-body">
-                    <p>This challenge will appear as missed.</p>
-                    <p>Please provide a reason to be able to start again.</p>
-                    <textarea rows="7"></textarea>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Do it later</button>
-                    <button type="button" class="btn btn-primary">Send</button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-
-    <!--Vendor Javascript-->
-    <script src="vendor/jquery/jquery.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.js"></script>
-
-    <!--Custom Javascript-->
-    <script src="app/dom.manipulation.js"></script>
-
-</body>
-
+            <!--Vendor Javascript-->
+            <script src="vendor/jquery/jquery.js"></script>
+            <script src="vendor/bootstrap/js/bootstrap.js"></script>
+            <script src="vendor/bootstrap/js/map.js"></script>
+    </body>
 </html>
