--- a/index-journey.html
+++ b/index-journey.html
@@ -27,7 +27,7 @@
                 <div>
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+                        <button type="button" class="navbar-toggle collapsed hidden-xs" data-toggle="collapse" data-target="#menu">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -54,7 +54,7 @@
                     <div class="collapse navbar-collapse" id="menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture! 
+                                <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
                                     <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
                                     <span class="caret"></span>
                                 </a>
