--- a/app/index.html
+++ b/app/index.html
@@ -21,45 +21,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
   <script src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="../bower_components/angular-resource/angular-resource.js"></script>
-
-
-
+  <script src="../bower_components/oauth-signature/dist/oauth-signature.min.js"></script>
   <script src="dom.manipulation.js"></script>
   <script src="scripts/app.js"></script>
-
 </head>
+
   <body ng-app="aowpAcademyCapstoneApp">
-    <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!-- Add your site or application content here -->
-    <div class="container">
-      <div ui-view></div>
-    </div>
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <!-- <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>-->
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<!--        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>-->
-        <!--<script src="../nodejs-yelp-app/routes/search.js"></script>-->
-
-    <!-- endbuild -->
-</body>
+      <div class="container">
+         <div ui-view></div>
+      </div>
+  </body>
 </html>
