JourneyStarted - UI Fixes

--- a/index-journey-overview.html
+++ b/index-journey-overview.html
@@ -165,7 +165,7 @@
 
             </div>
             <div id="grad1" class="col-sm-2 col-md-2 profile">
-              <img src="content/images/ms.jpg" alt="profile image">
+              <img src="content/images/ms.jpg" alt="profile image" class="grayscale" title="grayscale">
 
             </div>
             <div class="col-sm-4 col-md-6 customerReview">
