--- a/index-journey-overview.html
+++ b/index-journey-overview.html
@@ -99,7 +99,7 @@
             <button class="btn btn-default dropdown-toggle" type="button" id="sort-by" data-toggle="dropdown" aria-expanded="false">
               Most Recent <i class="fa fa-sort"></i>
             </button>
-            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="sort-by">
+            <ul class="dropdown-menu dropdown-menu-right mostrecent-dropdown" role="menu" aria-labelledby="sort-by">
               <li><a>Most Recent</a>
               </li>
               <li class="divider"></li>
