--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
   <!--Custom CSS-->
   <link href="../content/styles/css/sprite.css" rel="stylesheet" />
   <link href="../content/styles/css/styles.css" rel="stylesheet" />
-  <link href="../content/styles/styles.less" rel="stylesheet" />
+  <link href="../content/styles/css/journey.css" rel="stylesheet" />
+  <!--link href="../content/styles/styles.less" rel="stylesheet" /-->
 
   <script src="../vendor/jquery/jquery.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.js"></script>
