login window modifications

--- a/index-home-login.html
+++ b/index-home-login.html
@@ -33,7 +33,6 @@
                         </button>
                         <a class="btn-login navbar-brand login-collapsed" href="#">Login</a>
                         <a class="navbar-brand">FoodieJournal</a>
-
                     </div>
 
                     <div class="navbar-header hidden-md hidden-sm">
@@ -55,18 +54,7 @@
                             </li>
                         </ul>
                     </div>
-
-
-                    <!--for mobile use-->
-
-
-
-
-
-                    <!-- /.navbar-collapse -->
-
-
-                    <!-- Login -->
+                  <!-- Login -->
                     <div class="row login-window hide  ">
                         <div class="col-xs-12">
                             <form>
@@ -76,20 +64,20 @@
                                 <div class="form-group">
                                     <input type="password" class="form-control" placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-default visible-sm visible-md btn-block">Login</button>
+                                <button type="submit" class="btn login-btn visible-sm visible-md btn-block">Login</button>
                                 <button type="submit" class="btn btn-warning btn-block visible-xs">Login</button>
                             </form>
                         </div>
-                        <div class="col-xs-12 hidden-xs">
-                            <p>or login with:</p>
+                        <div class="col-xs-12">
+                            <p>or login with</p>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos ">
                             <div class="sprites facebook"></div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos ">
                             <div class="sprites twitter"></div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-3 btn-logos">
                             <div class="sprites google-plus"></div>
                         </div>
                         <div class="arrow-up"></div>
