header page changes for 1.index-journey.html, 2.index-journey-challenge.html, 3.index-journey-overview.html.

--- a/index-journey-overview.html
+++ b/index-journey-overview.html
@@ -26,6 +26,20 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
+          <ul class="nav navbar-nav navbar-left">
+            <li class="dropdown">
+              <a href="#"  class="dropdown-toggle user-menu hidden-xs" data-toggle="dropdown" role="button" >
+                <img src="mvcuisine/images/icons/Hamburger-menu.png">
+              </a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="index-journey-overview.html" role="button">Journey</a>
+                </li>
+                <li class="divider"></li>
+                <li><a href="index-journey.html" role="button">My Progress</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -35,16 +49,10 @@
           <a class="navbar-brand">FoodieJournal</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="menu">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index-journey-overview.html">Journey</a>
-            </li>
-            <li><a href="index-journey.html">My Progress</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
+              <a href="#" class="dropdown-toggle user-menu hidden-xs" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
                 <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
                 <span class="caret"></span>
               </a>
@@ -55,6 +63,14 @@
                 <li><a href="index-home-login.html">Logout</a>
                 </li>
               </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="collapse hidden-sm" id="menu">
+          <ul class="nav navbar-nav">
+            <li><a href="index-journey-overview.html">Journey</a>
+            </li>
+            <li><a href="index-journey.html">My Progress</a>
             </li>
           </ul>
         </div>
