--- a/index-journey.html
+++ b/index-journey.html
@@ -24,34 +24,33 @@
         <!--Navigation Menu-->
         <header>
             <nav class="navbar navbar-default">
-                <div>
+                <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed hidden-xs" data-toggle="collapse" data-target="#menu">
+                      <ul class="nav navbar-nav navbar-left">
+                        <li class="dropdown">
+                          <a href="#"  class="dropdown-toggle user-menu hidden-xs" data-toggle="dropdown" role="button" >
+                            <img src="mvcuisine/images/icons/Hamburger-menu.png">
+                          </a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="index-journey-overview.html" role="button">Journey</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li><a href="index-journey.html" role="button">My Progress</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <div class="navbar-pad" >
-                        <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" >
-                                    <img src="mvcuisine/images/icons/Hamburger-menu.png">
-                                </a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="index-journey-overview.html" role="button">Journey</a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li><a href="index-journey.html" role="button">My Progress</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                            </div>
+                      <a class="navbar-brand">FoodieJournal</a>
                     </div>
-                    <a class="navbar-brand">FoodieJournal</a>
-                    <div class="collapse navbar-collapse" id="menu">
+
+                    <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
@@ -68,6 +67,14 @@
                             </li>
                         </ul>
                     </div>
+                  <div class="collapse hidden-sm" id="menu">
+                    <ul class="nav navbar-nav">
+                      <li><a href="index-journey-overview.html">Journey</a>
+                      </li>
+                      <li><a href="index-journey.html">My Progress</a>
+                      </li>
+                    </ul>
+                  </div>
                     <!-- /.navbar-collapse -->
                 </div>
                 <!-- /.container-fluid -->
