container padding changes for 1.index-home.html,

--- a/index-home-login.html
+++ b/index-home-login.html
@@ -22,7 +22,7 @@
         <!--Navigation Menu-->
         <header>
             <nav class="navbar navbar-default">
-                <div class="container-fluid">
+                <div class="container-fluid-home">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header hidden-xs">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
