header adjustments for mobile view 1.index-journey.html, 2.index-journey.html-challenge.html 3.index-journey.overview.html

--- a/index-journey-challenge.html
+++ b/index-journey-challenge.html
@@ -46,11 +46,10 @@
                       </button>
                       <a class="navbar-brand">FoodieJournal</a>
                     </div>
-
                     <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                          <a href="#" class="dropdown-toggle user-menu hidden-xs" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
+                          <a href="#" class="dropdown-toggle user-menu" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
                             <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
                             <span class="caret"></span>
                           </a>
@@ -64,11 +63,26 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="collapse hidden-sm" id="menu">
+                    <div class="collapse hidden-sm hidden-md" id="menu">
                       <ul class="nav navbar-nav">
                         <li><a href="index-journey-overview.html">Journey</a>
                         </li>
                         <li><a href="index-journey.html">My Progress</a>
+                        </li>
+                      </ul>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Hi Accenture!
+                            <img src="content/images/avatar.png" class="img-circle" alt="Avatar">
+                            <span class="caret"></span>
+                          </a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">My account</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li><a href="index-home-login.html">Logout</a>
+                            </li>
+                          </ul>
                         </li>
                       </ul>
                     </div>
